welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:8: error: type mismatch;
 found   : (Boolean, Boolean, Boolean)
 required: Boolean
	rep = (true, true, false)
              ^