welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	var rep = false
	if(!isMorning)
	{
		rep = true
		return rep
	}
	rep = (true, true, false)
	return rep
}
